--- a/i18n/ja_JP.po
+++ b/i18n/ja_JP.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: php-warrior\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2015-06-19 23:43+0900\n"
+"PO-Revision-Date: 2015-06-20 18:25+0900\n"
 "Last-Translator: Yusuke Ando <yandod@gmail.com>\n"
 "Language-Team: Japanese <yandod@gmail.com>\n"
 "Language: ja\n"
@@ -16,6 +16,10 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.5.7\n"
 "X-Poedit-SourceCharset: UTF-8\n"
+
+#: src/PHPWarrior/Level.php:67
+msgid "- turn %s -"
+msgstr "- ターン %s -"
 
 #: src/PHPWarrior/Game.php:143
 msgid ""
@@ -38,6 +42,10 @@ msgstr ""
 msgid "Choose %s by typing the number: "
 msgstr "番号で %s を選択してください:"
 
+#: src/PHPWarrior/Level.php:98
+msgid "Clear Bonus: %s"
+msgstr "クリアボーナス: %s"
+
 #: src/PHPWarrior/Game.php:162
 msgid "Enter a name for your warrior: "
 msgstr "きみの戦士の名前を入力せよ:"
@@ -51,6 +59,14 @@ msgstr "最初のレベルが生成された。phpwarrior/%s/README の説明を
 #: src/PHPWarrior/Profile.php:58 templates/README.php:1
 msgid "Level"
 msgstr "レベル"
+
+#: src/PHPWarrior/Level.php:107
+msgid "Level Grade: %s"
+msgstr "レベル評価: %s"
+
+#: src/PHPWarrior/Level.php:85
+msgid "Level Score: %s"
+msgstr "レベル得点: %s"
 
 #: src/PHPWarrior/Abilities/Walk.php:8
 msgid "Move in the given direction (forward by default)."
@@ -102,6 +118,10 @@ msgstr "同じレベルに留まります。次はさらに高得点を目指し
 msgid "Success! You have found the stairs."
 msgstr "成功! きみは階段を発見した。"
 
+#: src/PHPWarrior/Level.php:91
+msgid "Time Bonus: %s"
+msgstr "タイムボーナス: %s"
+
 #: templates/README.php:7
 msgid "Tip"
 msgstr "ヒント"
@@ -112,6 +132,10 @@ msgid ""
 "\n"
 "  php-warrior -l 3"
 msgstr ""
+
+#: src/PHPWarrior/Level.php:112 src/PHPWarrior/Level.php:121
+msgid "Total Score: %s"
+msgstr "総合得点: %s"
 
 #: src/PHPWarrior/Game.php:35
 msgid "Unable to continue without directory."
