--- a/i18n/ja_JP.po
+++ b/i18n/ja_JP.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: php-warrior\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2015-06-20 18:25+0900\n"
+"PO-Revision-Date: 2015-06-20 18:40+0900\n"
 "Last-Translator: Yusuke Ando <yandod@gmail.com>\n"
 "Language-Team: Japanese <yandod@gmail.com>\n"
 "Language: ja\n"
@@ -26,6 +26,10 @@ msgid ""
 "Another level has been added since you started epic, going back to normal "
 "mode."
 msgstr ""
+
+#: src/PHPWarrior/Abilities/Attack.php:7
+msgid "Attacks a unit in given direction (forward by default)."
+msgstr "指定された方向のユニットを攻撃する。 (forward がデフォルト)"
 
 #: src/PHPWarrior/Game.php:87
 msgid ""
@@ -176,6 +180,14 @@ msgstr "きみの前には長い廊下があり奥には階段が見える。他
 msgid "Your average grade for this tower is: %s"
 msgstr "あなたのこの塔の平均評価は: %s"
 
+#: src/PHPWarrior/Abilities/Attack.php:15
+msgid "attacks %1$s and hits %2$s"
+msgstr "%1$sを攻撃し、%2$sに命中。"
+
+#: src/PHPWarrior/Abilities/Attack.php:27
+msgid "attacks %s and hits nothing"
+msgstr "%s を攻撃し、空振りした。"
+
 #: src/PHPWarrior/Abilities/Walk.php:23
 msgid "bumps into %s"
 msgstr "%s に衝突した"
@@ -198,11 +210,11 @@ msgstr "点数"
 
 #: src/PHPWarrior/Units/Base.php:36
 msgid "takes %1$s damage, %2$s health power left"
-msgstr "%1$s のダメージを受け、残りヘルスパワー %2$s"
+msgstr "%1$s のダメージを受け、残り生命力 %2$s"
 
 #: src/PHPWarrior/Abilities/Walk.php:15
 msgid "walks %s"
-msgstr "%s に歩いた"
+msgstr "%s に歩いた。"
 
 #: src/PHPWarrior/Space.php:90
 msgid "wall"
