--- a/i18n/ja_JP.po
+++ b/i18n/ja_JP.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: php-warrior\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2015-06-21 01:49+0900\n"
+"PO-Revision-Date: 2015-06-21 11:54+0900\n"
 "Last-Translator: Yusuke Ando <yandod@gmail.com>\n"
 "Language-Team: Japanese <yandod@gmail.com>\n"
 "Language: ja\n"
@@ -153,6 +153,10 @@ msgstr "総合得点: %s"
 msgid "Unable to continue without directory."
 msgstr "ディレクトリ無しでは継続できません。"
 
+#: src/PHPWarrior/Units/Warrior.php:48
+msgid "Warrior"
+msgstr "戦士"
+
 #: templates/README.php:17
 msgid "Warrior Abilities"
 msgstr "戦士の能力"
@@ -188,11 +192,11 @@ msgstr "きみの前には長い廊下があり奥には階段が見える。他
 msgid "Your average grade for this tower is: %s"
 msgstr "あなたのこの塔の平均評価は: %s"
 
-#: src/PHPWarrior/Abilities/Attack.php:15
+#: src/PHPWarrior/Abilities/Attack.php:16
 msgid "attacks %1$s and hits %2$s"
 msgstr "%1$sを攻撃し、%2$sに命中。"
 
-#: src/PHPWarrior/Abilities/Attack.php:27
+#: src/PHPWarrior/Abilities/Attack.php:28
 msgid "attacks %s and hits nothing"
 msgstr "%sを攻撃し、空振りした。"
 
@@ -207,6 +211,14 @@ msgstr "%sに衝突した"
 #: src/PHPWarrior/Units/Base.php:42
 msgid "dies"
 msgstr "死亡"
+
+#: src/PHPWarrior/Units/Warrior.php:58
+msgid "does nothing"
+msgstr "何もしない。"
+
+#: src/PHPWarrior/Units/Warrior.php:27
+msgid "earns %s points"
+msgstr "%s点を獲得。"
 
 #: src/PHPWarrior/Position.php:117
 msgid "east"
